# ms-baseline

./: .gitignore  main.py  pyproject.toml
common/: ir_parser.py  metrics.py  schema_migration.py
kmeans/: main.py
louvain/: main.py
mono2rest/: README.md  __init__.py  data_models.py  ir_adapter.py  llm_backend.py  main.py  nsga_clustering.py  requirements.txt  rest_api_generator.py  run_demo.py  semantic_embedder.py
nsga3/: __init__.py  data_models.py  ir_adapter.py  main.py  nsga_clustering.py  semantic_embedder.py
service_cutter/: coupling.py  main.py
