[project]
name = "ms-baseline"
version = "0.1.0"
description = "Microservice decomposition baselines (MONO2REST, etc.)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "nltk",
    "networkx>=3.6.1",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers",
    "transformers",
    "torch",
]
